--- a/config-example.yaml
+++ b/config-example.yaml
@@ -7,5 +7,21 @@ api_keys:
 assets: 
   YOUTUBE_URL: "https://www.youtube.com/watch?v=eeUqAE9EH6w"  # URL of the YouTube video
 
-video_parameters: 
-  VIDEO_TOPIC: "Horror story"  # The topic of the video
+video_parameters:
+  VIDEO_SCRIPT_TYPE: "based_on_topic" #options (based_on_topic, ready_made_script)
+  VIDEO_TOPIC: "football"  # The topic of the video
+  VIDEO_SCRIPT: | #leave empty to generate based on the video_topic
+  
+    Hey everyone! Let’s dive into something that’s transforming our world: artificial intelligence!
+
+    AI is everywhere, from the playlists you love to how your phone unlocks with your face.
+
+    What excites me is how AI is revolutionizing industries like healthcare, education, and even space exploration.
+
+    Picture a world where doctors use AI for quicker diagnoses or students get tailored learning experiences.
+
+    Now, let’s think about the future of AI. Will it help tackle climate change? Or will it lead to job displacement?
+
+    Share your thoughts in the comments! What excites or worries you about AI? Let’s discuss!
+
+    Don’t forget to like and follow for more awesome AI content! The future is happening right now!
